# KARE-Project---microservice

./: .env.example  Dockerfile  QUICK_START.md  README.md  SETUP_GUIDE.md  TEST_RESULTS.md  docker-compose.yml  pyproject.toml
docs/: API_DOCUMENTATION.md
src/: api.py  auth.py  config.py  database.py  models.py  user_service.py
